fix unexpected "x overflow" scroll issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 /* layout styles*/
 .content {
     margin-top: 8%;
+    display: flex;
+    flex-direction: column;
 }
 
 .topnav {
@@ -16,14 +18,18 @@
     padding: 12px;
 }
 
-.even_space {
+.movies {
     display: flex;
-    justify-content: space-around; 
     justify-content: space-between;
 }
 
-.center_text {
-    text-align: center;
+.movie {
+    display: flex;
+    flex-direction: column;
+}
+
+img {
+    width: 250px;
 }
 
 /* button styles */
@@ -118,4 +124,7 @@
     visibility: visible;
 }
 
+.center_text {
+    text-align: center;
+}
 
